<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    tools:context="io.particle.android.sdk.devicesetup.ui.DeviceDetailActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/device_detail_header"
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_device_onoffline"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/device_detail_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/battery_charge_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"/>
            <ProgressBar
                android:id="@+id/battery_charge_pb"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" />
            <TextView
                android:id="@+id/wifi_signal_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"/>
            <ProgressBar
                android:id="@+id/wifi_signal_pb"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" />
            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_buddy_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/msg_device_buddy_header"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="fill">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:text="@string/buddy_0_prefix"
                    android:textSize="30sp" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <EditText
                    android:id="@+id/buddy_0_edit_txt"
                    style="@style/SparkEditText"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/edittext_form_element_gap"
                    android:hint="@string/prompt_buddy_0"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <Button
                    android:id="@+id/buddy_0_submit"
                    style="@style/SparkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/submit" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="fill">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:text="@string/buddy_1_prefix"
                    android:textSize="30sp" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <EditText
                    android:id="@+id/buddy_1_edit_txt"
                    style="@style/SparkEditText"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/edittext_form_element_gap"
                    android:hint="@string/prompt_buddy_1"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <Button
                    android:id="@+id/buddy_1_submit"
                    style="@style/SparkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/submit" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="fill">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:text="@string/buddy_2_prefix"
                    android:textSize="30sp" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <EditText
                    android:id="@+id/buddy_2_edit_txt"
                    style="@style/SparkEditText"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/edittext_form_element_gap"
                    android:hint="@string/prompt_buddy_2"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>

                <Button
                    android:id="@+id/buddy_2_submit"
                    style="@style/SparkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/submit" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>