<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="io.particle.android.sdk.devicesetup.ui.SuccessActivity">

    <include layout="@layout/brand_image_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/success"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/result_summary"
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_did_it"/>

        <TextView
            android:id="@+id/result_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/setup_success_details"/>

        <TextView
            android:id="@+id/device_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/device_naming_label"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:padding="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="24dp"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </FrameLayout>
        <TextView
            android:id="@+id/action_troubleshooting"
            style="@style/LinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:text="@string/troubleshooting"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <Button
                android:id="@+id/action_done"
                style="@style/SparkButton"
                android:text="@string/action_done"/>

            <ProgressBar
                android:id="@id/button_progress_indicator"
                style="@style/SparkSpinner"
                android:layout_alignLeft="@id/action_done"
                android:layout_alignStart="@id/action_done"
                tools:ignore="RtlHardcoded"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
